test-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: dev
  labels:
     env: development
spec:
  type: LoadBalancer
  selector:
      env: development
  ports:
  - protocol : TCP
    port: 83
    targetPort: 8080
